--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,31 @@
-.App {
-  text-align: center;
+.container {
+    display: flex;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.flex-img-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.flex-item {
+    width: 31%;
+    margin: 1%;
 }
 
-.App-link {
-  color: #61dafb;
+.large-img-container {
+    width: 40%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-text-container {
+    position: relative;
+}
+
+.overlay-text {
+    color: white;
+    background: blueviolet;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    /* transform: translate(-50%, -50%); */
 }
