--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
 .container {
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(9,1fr);
+}
+
+.nav {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    background: lightblue;
+}
+
+.links {
     display: flex;
+    justify-content: space-between;
 }
 
 .flex-img-container {
     display: flex;
     flex-wrap: wrap;
-    width: 60%;
+    /* width: 60%; */
+    grid-column: 1/4;
+    grid-row: 2/10;
+    background: lightsalmon;
+
 }
 
 .flex-item {
@@ -13,13 +30,17 @@
     margin: 1%;
 }
 
-hr {
+/* hr {
     width: 1px;
     height: 100vh;
-}
+} */
 
 .large-img-container {
-    width: 40%;
+    /* width: 40%; */
+    grid-column: 4/7;
+    background: lightgoldenrodyellow;
+    grid-row: 2/10;
+
 }
 
 .img-text-container {
@@ -33,4 +54,8 @@ hr {
     top: 50%;
     left: 25%;
     /* transform: translate(-50%, -50%); */
+}
+
+.dragged {
+    background: blue;
 }
