initial functioning of clickable offsets

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,17 @@ html, body {
     position: relative;
 }
 
+.typed-text {
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    font-family: Helvetica;
+    background-color: rgba(101, 84, 87, 0.6);
+}
+
 .overlay-text {
     color: white;
     background: blueviolet;
@@ -108,9 +119,6 @@ label {
     font-weight: bold;
 }
 
-.dragged {
-    background: blue;
-}
 
 .blue-btn {
     background-color: #2170ef;
@@ -144,9 +152,9 @@ label {
     font-weight: bold;
     border-radius: 3.5em;
     padding: 1%;
-    margin: 1%;
+    margin: 2%;
     border: none;
-    width: 15%;
+    /* width: 15%; */
 }
 
 .print-btn:hover {
