--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html, body {
 .container {
     display: grid;
     grid-template-columns: repeat(6,1fr);
-    grid-template-rows: repeat(14,1fr);
+    grid-template-rows: auto repeat(14,1fr);
 }
 
 /* *************************************** */
