fixing styles, trying to refactor image loading and clickable position

--- a/src/Stock.css
+++ b/src/Stock.css
@@ -1,34 +1,39 @@
 .stock-container {
-    /* display: flex; */
-    /* flex-direction: column; */
-    display: grid;
-    grid-column: 1/4;
-    grid-row: 10/15;
-    background-color: mediumblue;
-    /* grid-template-columns: repeat(5, 1fr); */
-    /* height: 100%; */
-    /* grid-gap: 1%; */
-    grid-template-rows: auto repeat(2, 1fr);
+	/* display: flex; */
+	/* flex-direction: column; */
+	display: grid;
+	grid-column: 1/span 3;
+	/* grid-row: 4; */
+	/* background-color: mediumblue; */
+	grid-template-columns: repeat(5, 1fr);
+	height: 100%;
+	grid-gap: 1%;
+	grid-template-rows: repeat(3, 1fr);
+	margin: 4%;
+	margin-bottom: 15%;
 }
 
-.stock-header {
-    /* grid-row: 1/2; */
-}
-
-.stock-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    background-color: orange;
-    grid-gap: 1%;
-    /* height: 100%; */
-    /* grid-template-rows: repeat(3, 1fr); */
-    grid-row: auto;
-    margin: 2%;
-}
+/* .stock-grid {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	background-color: orange;
+	grid-gap: 1%;
+	height: 100%;
+	grid-template-rows: repeat(3, 1fr);
+	grid-row: auto;
+	margin: 2%;
+} */
 
 .stock-box {
-    background-color: gray;
-    border: 1px solid black;
-    margin: 1%;
-    /* width: 32%; */
+	background-color: gray;
+	border: 1px solid black;
+	margin: 3%;
+	/* width: 32%; */
+}
+
+@media (max-width: 900px) {
+	.stock-container {
+		grid-column: 1/span 6;
+		grid-row: 15;
+	}
 }
