--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html,
+body {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	height: 100%;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-template-rows: auto repeat(14,1fr);
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	/* grid-template-rows: auto repeat(14, 1fr); */
 }
 
 /* *************************************** */
@@ -15,30 +17,34 @@ html, body {
 /* *************************************** */
 
 .links {
-    grid-column: 1/7;
-    grid-row: 1/2;
-    background-color: #2170ef;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    color: white;
-    font-size: 1.1rem;
-    margin: 0;
-    padding: 0; /*eliminate extra left space */
+	grid-column: span 6;
+	/* grid-row: 1/2; */
+	background-color: #2170ef;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	list-style: none;
+	color: white;
+	font-size: 1.1rem;
+	margin: 0;
+	padding: 0; /*eliminate extra left space */
 }
 
 /* https://repl.it/@mike314151/Links-navbar-grid?language=html&folderId= */
 
-.links > li:nth-child(1) {margin-right: auto;}
-
-.link-bold {
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
+.links > li:nth-child(1) {
+	margin-right: auto;
 }
 
-.links > li {margin: 1%;}
+.link-bold {
+	font-size: 1.2rem;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.links > li {
+	margin: 1%;
+}
 
 /* .nav-hr {
     width: 1%;
@@ -50,31 +56,35 @@ html, body {
 /* LEFT SIDE */
 /* *************************************** */
 
-.flex-img-container {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* width: 60%; */
-    grid-column: 1/4;
-    grid-row: 2/10;
-    /* background: lightsalmon; */
-    margin: 5%;
-
+.grid-img-container {
+	/* display: flex; */
+	/* flex-wrap: wrap; */
+	/* width: 60%; */
+	grid-column: 1/span 3;
+	/* grid-row: 2/10; */
+	/* background: lightsalmon; */
+	margin: 5%;
+	display: grid;
+	grid-gap: 1%;
+	grid-template-columns: repeat(3, 1fr);
 }
 
 .header {
-    text-align: center;
+	text-align: center;
+	grid-column: 1/-1;
 }
 
-.flex-item {
-    width: 31%;
-    margin: 1%;
-     height: auto; /*to match width, make it square */
+.grid-item {
+	width: 31%;
+	margin: 1%;
+	height: auto; /*to match width, make it square */
 }
 
 .flex-item:hover {
-    transform: scale(1.1);
-    border: 1px solid black;
-    transition: transform 1s ease;
+	transform: scale(1.1);
+	border: 1px solid black;
+	cursor: pointer;
+	transition: transform 1s ease;
 }
 
 /* hr {
@@ -87,54 +97,54 @@ html, body {
 /* *************************************** */
 
 .large-img-container {
-    /* width: 40%; */
-    grid-column: 4/7;
-    /* background: lightgoldenrodyellow; */
-    grid-row: 2/10;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    border-left: 1.5px solid lightgray;
+	/* width: 40%; */
+	grid-column: 4 / span 3;
+	grid-row: 2 / span 4;
+	/* background: lightgoldenrodyellow; */
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	border-left: 1.5px solid lightgray;
 }
 
 .img-text-container {
-    position: relative;
+	position: relative;
 }
 
 .typed-text {
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-weight: bold;
-    font-family: Helvetica;
-    background-color: rgba(101, 84, 87, 0.6);
+	position: absolute;
+	left: 50%;
+	top: 40%;
+	transform: translate(-50%, -50%);
+	color: white;
+	font-weight: bold;
+	font-family: Helvetica;
+	background-color: rgba(101, 84, 87, 0.6);
 }
 
 .overlay-text {
-    color: white;
-    background: blueviolet;
-    position: absolute;
-    top: 50%;
-    left: 25%;
-    /* transform: translate(-50%, -50%); */
+	color: white;
+	background: blueviolet;
+	position: absolute;
+	top: 50%;
+	left: 25%;
+	/* transform: translate(-50%, -50%); */
 }
 
-
-.input-container, .upload-container {
-    display: flex;
-    flex-direction: column;
+.input-container,
+.upload-container {
+	display: flex;
+	flex-direction: column;
 }
 
 .large-input {
-    padding: 3.5rem;
+	padding: 3.5rem;
 }
 
 label {
-    font-size: 1.2rem;
-    font-weight: bold;
+	font-size: 1.2rem;
+	font-weight: bold;
 }
 
 /* ************************ */
@@ -142,65 +152,71 @@ label {
 /* ************************ */
 
 button {
-    padding: 1% 4%;
+	padding: 1% 4%;
 }
 
 .blue-btn {
-    background-color: #2170ef;
-    color: white;
-    font-weight: bold;
-    border-radius: 3.5em;
-    /* padding: 1%; */
-    margin: 2%;
-    border: none;
+	background-color: #2170ef;
+	color: white;
+	font-weight: bold;
+	border-radius: 3.5em;
+	/* padding: 1%; */
+	margin: 2%;
+	border: none;
 }
 
 .blue-btn:hover {
-    color: #2170ef;
-    background-color: white;
-    cursor: pointer;
+	color: #2170ef;
+	background-color: white;
+	cursor: pointer;
+	transform: scale(1.1);
+	transition: transform 1s;
 }
 
 .footer-btn-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
 }
 
 .footer-btn-container > button:nth-child(1) {
-    margin-right: auto;
+	margin-right: auto;
 }
 
 .print-btn {
-    background-color: rgb(31, 151, 71);
-    color: white;
-    font-weight: bold;
-    border-radius: 3.5em;
-    /* padding: 1%; */
-    margin: 2%;
-    border: none;
-    /* width: 15%; */
+	background-color: rgb(31, 151, 71);
+	color: white;
+	font-weight: bold;
+	border-radius: 3.5em;
+	/* padding: 1%; */
+	margin: 2%;
+	border: none;
+	/* width: 15%; */
 }
 
 .print-btn:hover {
-    color: rgb(31, 151, 71);
-    background-color: white;
-    cursor: pointer;
+	color: rgb(31, 151, 71);
+	background-color: white;
+	cursor: pointer;
 }
 
+@media (max-width: 900px) {
+	.container {
+		grid-auto-rows: repeat(20, 1fr);
+	}
 
-@media (max-width: 675px) {
-    .large-img-container, .flex-img-container {
-        /* display: block; */
-        grid-column: 1/7;
-    }
+	.large-img-container,
+	.flex-img-container {
+		/* display: block; */
+		grid-column: 1/span 6;
+	}
 
-    .large-img-container {
-        grid-row: 6/10;
-    }
+	.large-img-container {
+		grid-row: 8/span 6;
+	}
 
-    .flex-img-container {
-        grid-row: 2/6;
-        border-bottom: 2px solid lightgray;
-    }
+	.grid-img-container {
+		grid-row: 2/span 6;
+		border-bottom: 2px solid lightgray;
+	}
 }
